--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -25,7 +25,7 @@
     </form>
     
     <p style="margin-top: 1.5rem; text-align: center; color: #666;">
-      Don't have an account? <a href="/register" style="color: #2E86C1; text-decoration: none;">Register here</a>
+      Don't have an account? <a href="/register" style="color: #e4e4e4; text-decoration: none;">Register here</a>
     </p>
   </div>
 </div>
