--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -36,7 +36,7 @@
     </form>
     
     <p style="margin-top: 1.5rem; text-align: center; color: #666;">
-      Already have an account? <a href="/login" style="color: #2E86C1; text-decoration: none;">Login here</a>
+      Already have an account? <a href="/login" style="color: #d5d7d8; text-decoration: none;">Login here</a>
     </p>
   </div>
 </div>
