making frontend changes

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -141,8 +141,8 @@
                     <div class="footer-section">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-envelope"></i> support@meditask.com</li>
-                            <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
+                            <li><i class="fas fa-envelope"></i>imsarkarjeet@gmail.com</li>
+                            <li><i class="fas fa-phone"></i>(+91) 81590 60072</li>
                         </ul>
                     </div>
                 </div>
