making all frontend changes

--- a/web/templates/chatbot.html
+++ b/web/templates/chatbot.html
@@ -79,7 +79,7 @@
 <style>
     .chat-container {
         scroll-behavior: smooth;
-        background-color: #f9fbfd;
+        background-color:rgb(97, 150, 242);
     }
     
     .chat-container::-webkit-scrollbar {
@@ -87,7 +87,7 @@
     }
     
     .chat-container::-webkit-scrollbar-track {
-        background: #f1f1f1;
+        background:rgb(97, 150, 242);
         border-radius: 10px;
     }
     
